Criação de coluna e requisição de senha para transferencia
